--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ steps:
       git clone https://github.com/kraj/meta-clang.git sources/meta-clang -b warrior
       git clone https://github.com/mirzak/meta-coral.git sources/meta-coral -b warrior
       MACHINE=coral-dev DISTRO=fslc-wayland source ./setup-environment build
+      read -n 6 -s -r -p "Press any key to continue"
       echo 'BBLAYERS += "${BSPDIR}/sources/meta-clang"' >> conf/bblayers.conf
       echo 'BBLAYERS += "${BSPDIR}/sources/meta-coral"' >> conf/bblayers.conf
       bitbake core-image-base
