Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ steps:
     script: |
       # Write your commands here
       sudo apt-get install repo
+      echo "ACCEPT_FSL_EULA = 1" >> conf/local.conf
       mkdir coral && cd coral
       repo init -u https://github.com/Freescale/fsl-community-bsp-platform -b warrior
       repo sync
