--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,9 @@ steps:
       repo sync
       git clone https://github.com/kraj/meta-clang.git sources/meta-clang -b warrior
       git clone https://github.com/mirzak/meta-coral.git sources/meta-coral -b warrior
-      echo "ACCEPT_FSL_EULA = 1" >> conf/local.conf
+      mkdir build
+      mkdir build/conf
+      echo "ACCEPT_FSL_EULA = 1" >> build/conf/local.conf
       MACHINE=coral-dev DISTRO=fslc-wayland source ./setup-environment build
       read -n 6 -s -r -p "Press any key to continue"
       echo 'BBLAYERS += "${BSPDIR}/sources/meta-clang"' >> conf/bblayers.conf
