--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,9 @@ steps:
       mkdir build
       mkdir build/conf
       echo 'ACCEPT_FSL_EULA = "1"' >> build/conf/local.conf
-      MACHINE=coral-dev DISTRO=fslc-wayland source ./setup-environment build
+      echo 'MACHINE = "coral-dev"' >> build/conf/local.conf
+      echo 'DISTRO = "fslc-wayland"' >> build/conf/local.conf
+      source ./setup-environment build
       echo 'BBLAYERS += "${BSPDIR}/sources/meta-clang"' >> conf/bblayers.conf
       echo 'BBLAYERS += "${BSPDIR}/sources/meta-coral"' >> conf/bblayers.conf
       bitbake core-image-base
