--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
       mkdir build/conf
       echo 'ACCEPT_FSL_EULA = "1"' >> build/conf/local.conf
       MACHINE=coral-dev DISTRO=fslc-wayland source ./setup-environment build
-      cat build/conf/local.conf
+      cat conf/local.conf
       echo 'BBLAYERS += "${BSPDIR}/sources/meta-clang"' >> conf/bblayers.conf
       echo 'BBLAYERS += "${BSPDIR}/sources/meta-coral"' >> conf/bblayers.conf
       bitbake core-image-base
